<resources>
    <string name="app_name">WavRecorder</string>
    <string name="notification_title">WavRecorder</string>
    <string name="notification_message">Recording</string>
    <string name="ticker_text">WavRecorder</string>
    <string name="perm_phone_state_read">In order to check if a compensate filter is available to your phone we have to get some information from your phone.</string>
    <string name="more_device_info">In order to get more accurate measurement configuration please make an internet connection.</string>
    <string name="update_info">"Updates will be enabled in the next measurement."</string>
    <string name="meas_acc_title">Measurement Accurate</string>
    <string name="meas_acc_sum">Select the desired accurate</string>
    <string name="calc_time_title">Calculation Time</string>
    <string name="calc_time_sum">Select the desired calculation time</string>
    <string name="calib_title">Calibration Mode</string>
    <string name="calib_sum">Save calibration wav file</string>
    <string name="rec_started">Recording has already started!</string>
    <string name="rec_stopped">Recording didn\'t started!</string>
    <string name="phonestate_denied">Permission denied: Read Phone State</string>
    <string name="start_meas">Measurement started!</string>
    <string name="stop_meas">Measurement stopped!</string>
    <string name="settings_info">Stop measurement before go to settings!</string>
    <string name="send_btn">Send</string>
    <string name="download_btn">Download</string>
    <string name="calibration">Calibration</string>
    <string name="calib_summary">Calibration of the mobile phone\'s microphone.</string>
    <string name="table_category">Category of noise level</string>
    <string name="table_db">Guidance value LAeq,M30 dB</string>
    <string name="table_recomm">Hearing protection recommendations</string>
    <string name="table_under3">Under 3 years:</string>
    <string name="table_3_to_14">Between 3 and 14 years:</string>
    <string name="table_14_to_18">Between 14 and 18 years:</string>
    <string name="table_no_limit">No limitations</string>
    <string name="table_notrecomm">Not recommended</string>
    <string name="table_max_2">Up to 2 hours stay</string>
    <string name="table_max_45">Up to 45 minutes stay</string>
    <string name="overdrive">Overload!</string>
    <string name="age_table">Age groups</string>
    <string name="age_table_summary">Select which age groups you want to be visible.</string>
    <string name="form_type">Event type, e.g. concert</string>
    <string name="form_location">Location</string>
    <string name="form_distance">Distance from sound system in meter</string>
    <string name="form_loudness">Loudness</string>
    <string name="form_comment">Comment</string>
    <string name="form_targetaudince">Target audience</string>
    <string name="form_soundsystem">Sound system type</string>
    <string name="form_eventlength">Event length</string>
    <string name="audience_1">Kindergarteners</string>
    <string name="audience_2">Elementary school children</string>
    <string name="audience_3">High school children</string>
    <string name="audience_4">Adults</string>
    <string name="loudnessvalue_0">Silent</string>
    <string name="loudnessvalue_1">Normal</string>
    <string name="loudnessvalue_2">Loud</string>
    <string name="loudnessvalue_3">Very loud</string>
    <string name="eventlengthsvalue_0">Not known</string>
    <string name="eventlengthsvalue_1">&lt; 1 hour</string>
    <string name="eventlengthsvalue_2">1&#8212;2 hour</string>
    <string name="eventlengthsvalue_3">2&#8212;4 hour</string>
    <string name="eventlengthsvalue_4">4 hour &lt;</string>
    <string name="soundsyssvalue_0">Don\'t know</string>
    <string name="soundsyssvalue_1">Line array</string>
    <string name="soundsyssvalue_2">1&#8212;1 (great) speaker</string>
    <string name="soundsyssvalue_3">Many small speakers</string>
    <string name="form_not_filled">Please fill all the fields!</string>
    <string name="settings">Settings</string>
    <string name="not_calib">Not Calibrated</string>
    <string name="model_calib">Modelly Calibrated</string>
    <string name="uniq_calib">Uniquely Calibrated</string>
    <string name="table_settings_sum">Select viewable age groups</string>
    <string name="table_settings">Viewable age groups</string>
    <string name="calib_filter">Use calibration filters</string>
    <string name="no_calib_data">No calibration data</string>
    <string name="calib_data_downloaded">Calibration data has downloaded</string>





</resources>
