<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_type"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_location"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_distance"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/text_loudness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_loudness" />

            <SeekBar
                android:id="@+id/input_loudness"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:progress="1" />

            <TextView
                android:id="@+id/text_loudnesvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loudnessvalue_1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_eventlength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_eventlength" />

            <SeekBar
                android:id="@+id/input_eventlength"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="3" />

            <TextView
                android:id="@+id/text_eventlengthvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventlengthsvalue_3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_soundsystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_soundsystem" />

            <SeekBar
                android:id="@+id/input_soundsystem"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3"
                android:progress="2" />

            <TextView
                android:id="@+id/text_soundsystemvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soundsyssvalue_2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_targetaudience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_targetaudince" />

            <RadioGroup
                android:id="@+id/target_audience"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <CheckBox
                    android:id="@+id/input_audience1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audience_1" />

                <CheckBox
                    android:id="@+id/input_audience2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audience_2" />

                <CheckBox
                    android:id="@+id/input_audience3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audience_3" />

                <CheckBox
                    android:id="@+id/input_audience4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audience_4" />
            </RadioGroup>

            <EditText
                android:id="@+id/input_comment"
                android:layout_width="344dp"
                android:layout_height="111dp"
                android:ems="10"
                android:hint="@string/form_comment"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="365dp" />

            <Button
                android:id="@+id/button_formsend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_btn" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>