<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/calibration"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_calib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="START"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_stop_calib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="STOP"
        app:layout_constraintStart_toEndOf="@+id/btn_start_calib"
        app:layout_constraintTop_toTopOf="@+id/btn_start_calib" />

    <Button
        android:id="@+id/btn_send_calib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_btn"
        app:layout_constraintStart_toStartOf="@+id/btn_start_calib"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_calib" />

    <Button
        android:id="@+id/btn_download_calib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/download_btn"
        app:layout_constraintStart_toStartOf="@+id/btn_stop_calib"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop_calib" />
</android.support.constraint.ConstraintLayout>